modified swagger and added file by id call
